test/fail_compilation/fail4375k.d
// 4375: Dangling else

void main() {
    mixin(q{
        if(true)
            if(true)
                assert(54);
        else
            assert(55);
    });
}

